--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -6,7 +6,7 @@
         <div style="text-align: center;" class="l1" *ngIf="typeName === 'products'">  Our {{typeTitle}}s</div>
         <div style="text-align: center;" class="my-2 l1 " *ngIf="typeName === 'services'">Our Services 
           <br>
-          <span class="s3">All wedding decorations and floral arrangememt are originally designed by Luxedream Floral Studio.</span>
+          <span class="s3">All wedding decorations and floral arrangement are originally designed by Luxedream Floral Studio.</span>
         </div><br>
         <div style="text-align: center;" class="l1" *ngIf="typeName === 'package'">  Our Packages</div>
 
