--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -4,18 +4,18 @@
 
 <div>
 	<div class="row mt-3">
-		<div class="ml-3 mr-5">
+		<div class="col-md-1 pt-1">
 			<h2>{{productTitle}}</h2>
 		</div>
-		<div class="pt-2 col">
-			<button type="button" style="border-radius: 5px;" title="Add" (click)="createProduct()">
+		<div class="col-md-2 pt-2" style="text-align: center;">
+			<button type="button" style="border-radius: 5px; font-size: large;" title="Add" (click)="createProduct()">
 				<i class="fas fa-plus"></i>
-				<span>Add</span>
+				<span> Add</span>
 			</button>
 		</div>
-		<div class="pt-2 col">
+		<div class="col-md-9 pt-2">
 			<input type="text" id="productSearch" class="form-control mb-2"
-				placeholder="search the title of products here" [formControl]="searchField">
+				placeholder="Search product title" [formControl]="searchField">
 		</div>
 	</div>
 
